# QuantOS

./: .dockerignore  .env  .env.example  .gitignore  ARCHITECTURE.md  CMakeLists.txt  DEPLOYMENT_CHECKLIST.md  Dockerfile.api  Dockerfile.web  LEGAL_DISCLAIMER.md  PRODUCTION_CHECKLIST.md  README.md  REPORT.md  RUN_DOCKER.md  docker-compose.yml  prometheus.yml
.github/workflows/: backend-tests.yml  ci.yml
apps/api/: .env.example  prismflow.db  requirements.txt  schema.sql
apps/api/app/: db.py  deps.py  main.py  rbac.py  worker.py
apps/api/app/core/: config.py
apps/api/app/routes/: admin.py  ai.py  analytics.py  auth.py  backtests.py  coach.py  competitions.py  engine.py  growth.py  jobs.py  journal.py  live_paper.py  market_context.py  market_intel.py  organizations.py  reports.py  strategies.py  subscriptions.py  system.py  trader_profile.py
apps/api/app/schemas/: prism.py
apps/api/app/services/: advanced_analytics.py  ai_explainer.py  binance_historical.py  coach.py  data_manager.py  engine_bridge.py  engine_runner.py  job_queue.py  live_paper.py  live_paper_perf.py  output_reader.py  performance_metrics.py  portfolio.py  production_readiness.py  strategy_health.py
apps/api/scripts/: smoke_job_lifecycle.py
apps/api/tests/: test_auth_api.py  test_auth_security.py  test_strategy_jobs_api.py
apps/web/: .env.example  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/achievements/: page.tsx
apps/web/app/admin/: page.tsx
apps/web/app/ai-coach-v2/: page.tsx
apps/web/app/alternative-data/: page.tsx
apps/web/app/analytics/: page.tsx
apps/web/app/audit-log/: page.tsx
apps/web/app/backtests/: page.tsx
apps/web/app/beta-status/: page.tsx
apps/web/app/charting/: page.tsx
apps/web/app/competitions/: page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/engine-connection/: page.tsx
apps/web/app/login/: LoginForm.tsx  page.tsx
apps/web/app/paper-trading/: page.tsx
apps/web/app/quant-coach/: page.tsx
apps/web/app/regime-dashboard/: page.tsx
apps/web/app/strategy-builder/: page.tsx
apps/web/app/trade-journal/: page.tsx
apps/web/app/trader-profile/: page.tsx
apps/web/components/: AuthProvider.tsx  ProfileMenu.tsx  QuantCoachVisuals.tsx  TopNav.tsx  TradingChart.tsx
apps/web/lib/: api.ts  liveChartCandles.ts  tradeClassification.ts
apps/web/tests/: livePaperUi.test.ts
configs/: sample_strategy_config.json
cpp_engine/: .env.example
cpp_engine/src/: PrismConfig.hpp  PrismConfigLoader.hpp  engine_shared.hpp  json_trade_parser.hpp  live_binance_engine.cpp  order_book.hpp  prism_backtest.cpp  prism_live_engine.cpp  prism_live_engine.hpp  prism_strategy.cpp  prism_strategy.hpp  raw_market_queue.cpp  trade_manager.cpp  trade_manager.hpp
cpp_engine/src/adapters/: MarketDataAdapter.hpp
cpp_engine/src/apps/: prism_live_paper_trading_app.cpp  prism_paper_trading_app.cpp  quantos_engine.cpp
cpp_engine/src/connectors/: BinanceClient.cpp  BinanceClient.h
cpp_engine/src/dashboard/: DashboardWriter.hpp
cpp_engine/src/execution/: ExchangeSimulator.hpp
cpp_engine/src/market_data/: binance_depth_parser.hpp  l2_order_book.hpp
cpp_engine/src/storage/: EventStore.hpp
cpp_engine/src/trading/: BrokerAdapterStub.hpp  ExchangeSimulator.hpp  IBroker.hpp  L2OrderBook.hpp  L3OrderBook.hpp  MatchingEngine.hpp  OrderTypes.hpp  PaperBroker.hpp  Portfolio.hpp  PositionSizer.hpp  RiskManager.hpp
cpp_engine/tests/: exchange_simulator_tests.cpp
data/binance/ADAUSDT/1m/: 2026-06-01_2026-06-15.csv  2026-06-01_2026-06-15.meta.json
data/binance/AVAXUSDT/1m/: 2026-06-01_2026-06-15.csv  2026-06-01_2026-06-15.meta.json
data/binance/BNBUSDT/1m/: 2026-06-01_2026-06-15.csv  2026-06-01_2026-06-15.meta.json
data/binance/BTCUSDT/15s/: 2026-06-14_2026-06-14.csv  2026-06-14_2026-06-14.meta.json
data/binance/BTCUSDT/1m/: 2026-06-01_2026-06-15.csv  2026-06-01_2026-06-15.meta.json
data/binance/DOGEUSDT/1m/: 2026-06-01_2026-06-15.csv  2026-06-01_2026-06-15.meta.json
data/binance/ETHUSDT/1m/: 2026-06-01_2026-06-15.csv  2026-06-01_2026-06-15.meta.json
data/binance/LINKUSDT/1m/: 2026-06-01_2026-06-15.csv  2026-06-01_2026-06-15.meta.json
data/binance/SOLUSDT/1m/: 2026-06-01_2026-06-15.csv  2026-06-01_2026-06-15.meta.json
data/binance/TRXUSDT/1m/: 2026-06-01_2026-06-15.csv  2026-06-01_2026-06-15.meta.json
docs/: AI_FEATURES.md  BACKTESTING_DATA_SOURCES.md  CHARTING.md  CODEX_MASTER_AUDIT.md  DATA_ADAPTERS.md  DEPLOYMENT.md  FINAL_TOUCHUP_AUDIT.md  LOCAL_ENGINE_SETUP.md  PRODUCT_STATUS.md  QUANTOS_BETA_DEPLOY_AUDIT.md  QUANTOS_UPDATE_AUDIT.md  SECURITY_NOTES.md  STRATEGY_HEALTH_SCORE.md  TEST_RESULTS.md  exchange_simulator_architecture.md  matching_engine_architecture.md
scripts/: auth_diagnostics.py  backup_postgres.sh  backup_postgres_windows.bat  backup_quantos.py  deploy_check.sh  generate_quant_coach_report.py  open_dashboard_static_windows.bat  quality_gate.py  run_ci_validation.sh  run_cpp_heavy_paper_linux.sh  run_cpp_heavy_paper_windows.bat  run_dashboard_server_windows.bat  run_live_paper_trading_demo_windows.bat  run_live_paper_trading_windows.bat  run_quality_suite.bat  smoke_quantos.py  validate_project.sh  verify_deployment.py
tests/: event_store_tests.cpp  exchange_simulator_tests.cpp  l2_order_book_tests.cpp  l3_order_book_tests.cpp  matching_engine_tests.cpp  paper_broker_tests.cpp  test_advanced_analytics.py  test_beta_touchups.py  test_config_and_db.py  test_hosted_backtest_guard.py  test_job_queue.py  test_live_paper_engine_integration.py  test_performance_metrics.py  test_production_mvp.py  test_quant_coach.py  test_services.py
(+2 files in other folders)
